fix event overflow and text decoration in button become a member

--- a/scss/_become_a_member.scss
+++ b/scss/_become_a_member.scss
@@ -26,7 +26,7 @@
     width: 377px;
     height: 70px;
     display: flex;
-    text-decoration: 0;
+    text-decoration: none;
     justify-content: center;
     align-items: center;
     font-weight: bold;
